--- a/webContent/css/main.css
+++ b/webContent/css/main.css
@@ -54,7 +54,7 @@
     width: 60px;
     height: 60px;
     margin: 10px;
-    background-color: whitesmoke;
+    background-color: green;
     border-radius: 50%;
     border: solid 1px black;
     box-shadow: 3px 3px 2px #454545;
